--- a/app/src/main/res/layout/fragment_english.xml
+++ b/app/src/main/res/layout/fragment_english.xml
@@ -4,10 +4,6 @@
     android:layout_height="match_parent"
     tools:context="com.andapps.greeting.fragment.EnglishFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="English Fragment" />
+    <include layout="@layout/include_message_list"/>
 
 </FrameLayout>
