--- a/app/src/main/res/layout/fragment_hindi.xml
+++ b/app/src/main/res/layout/fragment_hindi.xml
@@ -2,12 +2,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.andapps.greeting.fragment.HindiFragment">
+    tools:context="com.andapps.greeting.fragment.EnglishFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Hindi Fragment" />
+    <include layout="@layout/include_message_list"/>
 
 </FrameLayout>
