--- a/app/src/main/res/layout/fragment_new_year_base.xml
+++ b/app/src/main/res/layout/fragment_new_year_base.xml
@@ -4,10 +4,9 @@
     android:layout_height="match_parent"
     tools:context="com.andapps.greeting.fragment.NewYearBaseFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="New Year Base" />
+    <android.support.v4.view.ViewPager
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:id="@+id/viewPager"/>
 
 </FrameLayout>
