--- a/app/src/main/res/layout/app_bar_greeting.xml
+++ b/app/src/main/res/layout/app_bar_greeting.xml
@@ -32,13 +32,13 @@
 
     <include layout="@layout/content_greeting" />
 
-    <com.google.android.gms.ads.AdView
+    <!--<com.google.android.gms.ads.AdView
         android:id="@+id/adView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         ads:adSize="BANNER"
         android:layout_gravity="bottom"
-        ads:adUnitId="@string/banner_home_footer"></com.google.android.gms.ads.AdView>
+        ads:adUnitId="@string/banner_home_footer"></com.google.android.gms.ads.AdView>-->
 
 </android.support.design.widget.CoordinatorLayout>
