--- a/app/src/main/res/layout/content_greeting.xml
+++ b/app/src/main/res/layout/content_greeting.xml
@@ -13,16 +13,16 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_alignParentTop="true"
-            android:layout_marginBottom="50dp"/>
+            android:layout_above="@+id/adView"/>
 
 
-        <!--<com.google.android.gms.ads.AdView
+        <com.google.android.gms.ads.AdView
             android:id="@+id/adView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             ads:adSize="BANNER"
-            ads:adUnitId="@string/banner_home_footer"></com.google.android.gms.ads.AdView>-->
+            ads:adUnitId="@string/banner_home_footer"></com.google.android.gms.ads.AdView>
 
 
 
