--- a/app/src/main/res/layout/content_greeting.xml
+++ b/app/src/main/res/layout/content_greeting.xml
@@ -13,8 +13,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_alignParentTop="true"
-            android:layout_above="@+id/adView"
-            android:layout_marginBottom="50dp"/>
+            android:layout_above="@+id/adView"/>
 
 
         <!--<com.google.android.gms.ads.AdView
